# malaria-forecasting-system

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPERS.md  Docker  NOTICE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: verify-developer-name.yml
config/: config.example.yaml  config.yaml  logging.yaml
deployment/docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  README.md
scripts/: deploy.sh  load_historical_data.py  setup_database.py  train_models.sh
src/database/: __init__.py  manager.py  schema.sql
src/forecasting/: __init__.py  engine.py  finetuning.py  verification.py
src/service/: api.py  main.py  scheduler.py
src/training/: __init__.py  train_gan.py  train_pipeline.py  train_vae.py
tests/: test_data.py  test_database.py  test_forecasting.py  test_models.py  test_service.py
