[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","W","I","C90","UP"]
ignore = ["E501"]
exclude = ["deployment/*", "docs/*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[project]
name = "malaria-forecasting-system"
version = "0.1.0"
description = "End-to-end malaria forecasting service (streaming inference, verification, fine-tuning)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []